# ppt-extractor-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example_mcp_config.json  pyproject.toml  requirements.txt  setup.py
examples/: extract_ppt_example.py
ppt_extractor_mcp/: __init__.py  __main__.py  extractors.py  server.py
src/: server.py
